--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jwks-rsa",
+  "name": "@mmoriarity/jwks-rsa",
   "version": "1.5.0",
   "description": "Library to retrieve RSA public keys from a JWKS endpoint",
   "main": "lib/index.js",
@@ -11,7 +11,7 @@
     "limiter": "^1.1.4",
     "lru-memoizer": "^1.12.0",
     "ms": "^2.1.1",
-    "request": "^2.88.0"
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
